--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^1.3.4",
     "chalk": "^4.0.0",
+    "crypto-js": "^4.1.1",
     "moment": "^2.29.4",
     "nodegit": "^0.27.0",
     "readline-sync": "^1.4.10",
